# pomelo

./: .gitattributes  .gitignore  .gitmodules  README.md
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/bezdev/fame/: PerformanceTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/shaders/: Font.fs  Font.vs  PixelColor.ps  PixelColor.vs  SolidColor.fs  SolidColor.vs  SolidColorInstanced.ps  SolidColorInstanced.vs  Texture.fs
android/app/src/main/cpp/: CMakeLists.txt  buffers.cpp  main.cpp  material.cpp  renderer.h  timer.h
android/app/src/main/java/com/bezdev/fame/: MainActivity.java
android/app/src/main/java/com/bezdev/pomelo/: JNIUtil.java  Logger.java  MainActivity.java
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/bezdev/pomelo/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle
app/src/androidTest/java/com/bezdev/fame/: ExampleInstrumentedTest.java
app/src/main/cpp/: CMakeLists.txt  app.cpp  app.h  config.h  jniutil.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  renderer.cpp  renderer.h  renderobject.cpp  renderobjectcollection.cpp  renderobjectcollection.h  scene.h  shader.cpp  shader.h  timer.cpp  timer.h  util.h
app/src/main/java/com/bezdev/fame/: JNIUtil.java  Logger.java  MainActivity.java
app/src/main/res/values/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/bezdev/fame/: ExampleUnitTest.java
assets/: unit_axis.mtl
assets/blender/: unit_axis.blend  unit_axis.blend1
assets/fonts/: default.csv
desktop/: .gitignore  CMakeLists.txt  PerformanceResults.csv  S:\projects\pomelo\test\results\PerformanceResults.csv  build.py  build.sh  glad.c  main.cpp  pomelotest  run.sh  test.sh
desktop/inc/glad/: glad.h
src/assets/shaders/: PixelColor.ps  PixelColor.vs  SolidColorInstanced.ps  SolidColorInstanced.vs
src/cpp/: AndroidApp.cpp  AndroidApp.h  CMakeFameSrc.txt  CMakeJolt.cmake  CMakePomelo.cmake  CMakePomeloSrc.txt  ECS.cpp  ECS.h  EntityFactory.h  GLFWApp.cpp  GLFWApp.h  InputManager.cpp  InputManager.h  ObjectPool.h  PhysicsEngine.cpp  PhysicsEngine.h  app.cpp  app.h  buffers.cpp  buffers.h  camera.cpp  camera.h  components.h  config.h  jniutil.cpp  jniutil.h  logger.cpp  logger.h  mesh.cpp  mesh.h  model.cpp  model.h  renderer.cpp  renderer.h  renderobject.h  scene.cpp  scene.h  shader.cpp  shader.h  timer.cpp  (+3 more)
src/cpp/app/: AndroidApp.cpp  AndroidApp.h  App.cpp  App.h  GLFWApp.cpp  GLFWApp.h
src/cpp/engine/: Camera.cpp  Camera.h  CollisionEngine.cpp  CollisionEngine.h  Components.h  ECS.cpp  ECS.h  EntityFactory.h  EventDispatcher.cpp  EventDispatcher.h  Font.cpp  Font.h  InputManager.cpp  InputManager.h  Mesh.cpp  Mesh.h  PhysicsEngine.cpp  PhysicsEngine.h  PhysicsJolt.cpp  PhysicsJolt.h  Scene.cpp  Scene.h
src/cpp/render/: Buffers.cpp  Buffers.h  GUI.cpp  GUI.h  RenderBuffer.cpp  RenderBuffer.h  RenderObject.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Text.cpp  Text.h  Texture.cpp  Textures.cpp  Textures.h
src/cpp/util/: Color.cpp  Color.h  Logger.cpp  Logger.h  Math.cpp  Math.h  ObjectPool.h  Timer.cpp  Timer.h  Util.cpp  Util.h  jniutil.cpp  jniutil.h
src/shaders/: Font.fs  PixelColor.ps  PixelColor.vs  SolidColor.fs  SolidColor.vs  Texture.fs  Texture.vs
test/: CMakeLists.txt  CollisionDetectionTest.cpp  ECSTest.cpp  FontTest.cpp  GUITest.cpp  LoggerTest.cpp  MathTest.cpp  ObjectPoolTest.cpp  PerformanceTest.cpp  SandboxTest.cpp  ShaderTest.cpp  Test.cpp  Test.h  TimerTest.cpp  UtilTest.cpp  main.cpp
test/results/: PerformanceResults.csv
